<resources>
    <string name="app_name">inTouch</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="username">username</string>
    <string name="confirm_password">confirm password</string>
    <string name="register">Register</string>
    <string name="already_have_an_account_log_in_instead">Already have an account? Log in instead.</string>
    <string name="my_cards">My Cards</string>
    <string name="recently_shared">Recently Shared</string>
    <string name="support">Support</string>
    <string name="about_us">About Us</string>
    <string name="user">User</string>
    <string name="want_more_features">Hate ads and want more features?</string>
    <string name="go_pro">Go Pro</string>
    <string name="nav_drawer_open">Open nav drawer</string>
    <string name="nav_drawer_close">Close nav drawer</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="suggest_a_feature">Suggest a feature</string>
    <string name="redeem_pro_status">Redeem Pro Status</string>
    <string name="other_enquiry">Other enquiry</string>
    <string name="alium_site">thealiumcompany.com</string>
    <string name="version_code">v1.0</string>
    <string name="donate">Donate</string>
    <string name="donate_text">We make really cool apps for free because, why not? But money is really important so if you want to support our work, you can donate to us by clicking the link below. Any amount is appreciated.</string>
    <string name="your_account">Your Account</string>
    <string name="logout">Logout</string>
    <string name="tap_any_field">Tap any field to edit</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="follow_system">Follow system</string>
    <string name="your_name_here">Your Name Here</string>
    <string name="your_role_here">Your Role Here</string>
    <string name="phone_number_1">Phone Number 1</string>
    <string name="phone_number_2">Phone Number 2</string>
    <string name="email_1">Email 1:</string>
    <string name="email_2">Email 2:</string>
    <string name="street_address_here">Street Address Here</string>
    <string name="town_city_here">Town/City Here</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="save">Save</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="delete_profile_picture">Delete Profile Picture</string>
    <string name="username_user">Username: User</string>
    <string name="email_user_email_com">Email: user@email.com</string>
    <string name="password_hidden">Password: [hidden]</string>
    <string name="enter_new_details">Enter new details</string>
    <string name="update">Update</string>
    <string name="no_cards_found_add_new_card">No cards found. Add new Card.</string>
    <string name="now_editing">now editing</string>
    <string name="current_card">Current Card</string>
    <string name="card_style">Card Style</string>
    <string name="elegant">Elegant</string>
    <string name="_3_d">3-D</string>
    <string name="sharp">Sharp</string>
    <string name="regal">Regal</string>
    <string name="clean">Clean</string>
    <string name="brand_colors">Brand Colors</string>
    <string name="tap_any_color_to_change_it">Tap any color to change it</string>
    <string name="primary">Primary</string>
    <string name="_113646">#113646</string>
    <string name="secondary">Secondary</string>
    <string name="d4af37">#D4AF37</string>
    <string name="tertiary">Tertiary</string>
    <string name="text_primary">Text Primary</string>
    <string name="text_secondary">Text Secondary</string>
    <string name="logo">Logo</string>
    <string name="logo_file_1_png">logo file 1.png</string>
    <string name="browse">Browse</string>
    <string name="for_best_results_please_use_a_transparent_logo">For best results, please use a transparent logo</string>
    <string name="photo">Photo</string>
    <string name="photo_file_1_png">photo file 1.png</string>
    <string name="text">Text</string>
    <string name="tap_any_field_to_edit">Tap any field to edit</string>
    <string name="website">Website:</string>
    <string name="alium_website">thealiumcompany.com</string>
    <string name="name">Name:</string>
    <string name="my_name">Mishael O. Boamah</string>
    <string name="position">Position:</string>
    <string name="chief_executive_officer">Chief Executive Officer</string>
    <string name="phone_no_1">Phone No. 1:</string>
    <string name="_233_0549678132">(+233) 0549678132</string>
    <string name="phone_no_2">Phone No. 2:</string>
    <string name="_233_0592500459">(+233) 0592500459</string>
    <string name="mishaelopokuboamah_gmail_com">mishaelopokuboamah@gmail.com</string>
    <string name="street_address">Street Address:</string>
    <string name="house_no_15_gamba_street">House No. 15, Gamba Street</string>
    <string name="accra_central">Accra Central</string>
    <string name="city_town">City/Town:</string>
    <string name="select_base_card_style">Select Base Card Style</string>
    <string name="final_preview">Final Preview</string>
    <string name="preview">Preview</string>
    <string name="enter_card_name">Enter card name</string>
    <string name="home">Home</string>
</resources>