<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_about_us"
    tools:context=".AboutUs">

    <RelativeLayout
        android:id="@+id/top_bar_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageButton
            android:id="@+id/back_about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTint="@color/transparent"
            android:contentDescription="TODO"
            android:src="@drawable/ic_back_white"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/logo_section_alium"
        android:layout_below="@+id/top_bar_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:src="@drawable/img_alium_logo"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/alium_site"
                android:textSize="14sp"
                android:textColor="@color/primaryTextColor"
                android:letterSpacing="0.05"/>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/text_section"
        android:layout_above="@+id/bottom_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/donate_text"
            android:textSize="22sp"
            android:textColor="@color/primaryTextColor"
            android:textAlignment="center"
            android:textStyle="bold"
            android:gravity="center"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="20dp"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/version_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_code"
            android:textSize="18sp"
            android:textColor="@color/primaryTextColor"
            android:letterSpacing="0.05"
            android:layout_centerVertical="true"/>
        
        <Button
            android:id="@+id/donate"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:background="@drawable/roundedbuttonwhite"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/donate"
            android:textAllCaps="false"
            android:textColor="@color/primaryColor"
            android:textSize="20sp"
            android:textStyle="bold"
            android:letterSpacing="0.05"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"/>
    </RelativeLayout>

</RelativeLayout>